--- a/composer.json
+++ b/composer.json
@@ -12,20 +12,19 @@
         "darkaonline/l5-swagger": "^8.5",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^3.2",
-        "laravel/framework": "^10.10",
-        "laravel/passport": "^11.9",
-        "laravel/sanctum": "^3.2",
+        "laravel/framework": "^11.0",
+        "laravel/passport": "^12.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
-        "nwidart/laravel-modules": "^10.0",
-        "spatie/laravel-permission": "^5.11"
+        "spatie/laravel-permission": "^6.9.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.1",
+        "nunomaduro/collision": "^8.1",
+        "phpunit/phpunit": "^11.4.2",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
@@ -67,7 +66,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "wikimedia/composer-merge-plugin": true
         }
     },
     "minimum-stability": "stable",
