--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,4 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 L5_SWAGGER_GENERATE_ALWAYS=true
+L5_SWAGGER_UI_PERSIST_AUTHORIZATION=true
